 * Documented creation of custom payment modules
 * Creation of new templatetags (product_category_siblings and product_images)
 * Created new Shipping Module, 'Tiered', allowing multiple carriers and variable pricing by cart total.
 * Added cybersource payment module
 * New config values to display featured products randomly
 * Increased length of Contact phonenumber to work internationally
 * Added shipping countries directly to Shop - allowing the shops to specify legal countries for shipping.
 * Updated google analytics to new code, with an optional fallback to the old urchin.js
 * Added new Tax module "Area", which calculates taxes based on country or state.
 * Updated discount system to track which discounts were applied to which line items.
 * Add weight and dimension unit info to the product model.
 * Provide integration for UPS online tools.
 * New sku model field
 * New gift certificate capability.
 * Fixed New Zealand states/region info in l10n data
 * Improvements to tax calc code
 * Updated swedish translation
 * Improve checks to make sure dupe emails are not used by accounts
 * Fixed a bug with PDF generation in windows

Version 0.6, October 30, 2007
----------------
 * Removed dependency on Webda and added new l10n models
 * Added capability to rate and review products
 * Improved capabilities for users to manage their account information
 * Creation of a simple inventory management interface
 * Multiple bug fixes and code cleanups
 * New configuration option to allow user to set image upload directory name
 * Improved error handling for loading data
 * Allow manual product ordering in a category
 * Remove most custom settings from local_settings.py, instead using the satchmo.configuration app
 * Added a cache manager
 * Added TrustCommerce as a processing module
 * New downloadable product type
 * New custom product type
 * Added Swedish translation

Version 0.5, August 22, 2007
----------------------------
 * First official package launch