@@ -104,6 +104,7 @@ tr.ConfigurableProduct {
         		</tr>
     </table>
     <p>{% trans 'Include images?' %} {{ form.include_images }}</p>
+    <p>{% trans 'Include categories?' %} {{ form.include_categories }}</p>
     <p>{% trans 'Format?' %}{{ form.format }}</p>
 <input type="submit" value="{% trans 'Export' %}" class="default" />
 <input type="reset" value="{% trans 'Reset' %}" class="default" />
