@@ -34,6 +34,7 @@ Trunk
  * Updated swedish translation
  * Improve checks to make sure dupe emails are not used by accounts
  * Fixed a bug with PDF generation in windows
+ * Improved product export capability to support categories
 
 Version 0.6, October 30, 2007
 ----------------
